# LUDA

./: .gitignore  CMakeLists.txt  IDAPlugin.slnx  Plugin.cpp  README.md
Executor/: Executor.cpp  Executor.h
Executor/Libraries/: assembler.hpp  functions.hpp  hexrays.hpp  patching.hpp  print.hpp  strings.hpp  xrefs.hpp
IDAPlugin/: IDAPlugin.vcxproj  IDAPlugin.vcxproj.filters  dllmain.cpp
IDAPlugin/Executor/: Executor.cpp  Executor.h
IDAPlugin/Executor/Libraries/: patching.hpp  xrefs.hpp
IDAPlugin/executor/: Executor.cpp
IDAPlugin/ida_sdk/: config.hpp  err.h  frame.hpp  idalib.hpp  kernwin.hpp  libfuncs.hpp  network.hpp  search.hpp  segregs.hpp
IDAPlugin/ida_sdk/libs/: idalib.lib
IdaSDK/: allins.hpp  auto.hpp  bytes.hpp  compress.hpp  cvt64.hpp  dbg.hpp  demangle.hpp  diff3.hpp  dirtree.hpp  diskio.hpp  entry.hpp  exehdr.h  expr.hpp  fixup.hpp  fpro.h  funcs.hpp  gdl.hpp  graph.hpp  help.h  ida.hpp  ida_highlighter.hpp  idacfg.hpp  idd.hpp  idp.hpp  ieee.h  intel.hpp  jumptable.hpp  lex.hpp  lines.hpp  llong.hpp  loader.hpp  md5.h  merge.hpp  mergemod.hpp  moves.hpp  nalt.hpp  name.hpp  netnode.hpp  offset.hpp  parsejson.hpp  (+15 more)
IdaSDK/libs/: ida.lib  network.lib
LudaSocket/: ludasocket.cpp  ludasocket.h
